--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-server</artifactId>
-	<version>3.8.2</version>
+	<version>3.8.3-SNAPSHOT</version>
 	<url>http://www.github.com/eishub/bw4t</url>
 	
 	<properties>
@@ -165,7 +165,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.2</version>
+			<version>3.8.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>repast.simphony</groupId>
