--- a/bw4t-client/pom.xml
+++ b/bw4t-client/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-client</artifactId>
-	<version>3.8.6-SNAPSHOT</version>
+	<version>3.8.6</version>
 	<url>http://www.github.com/eishub/bw4t</url>
 
 	<properties>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.6-SNAPSHOT</version>
+			<version>3.8.6</version>
 		</dependency>
 
 		<dependency>
