--- a/bw4t-core/pom.xml
+++ b/bw4t-core/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>eishub.bw4t.core</groupId>
 	<artifactId>bw4t-core</artifactId>
-	<version>3.8.7-SNAPSHOT</version>
+	<version>3.8.7</version>
 	<name>bw4t-core</name>
 	<url>http://www.github.com/eishub/bw4t</url>
 
